# health-claim-checker

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  setup_project.sh
app/: streamlit_app.py
data/claims/: pico_ground_truth.json
docs/: Health_Claims_FactChecker_Proposal_v2.md
notebooks/: 01_api_exploration.ipynb  02_retrieval_comparison.ipynb  03_pipeline_e2e.ipynb
scripts/: download_benchmarks.py  e2e_grader_demo.py  e2e_retriever_demo.py  e2e_verdict_demo.py
src/: config.py  models.py
src/agents/: __init__.py  evidence_grader.py  evidence_retriever.py  retrieval_planner.py  verdict_agent.py  vlm_extractor.py
src/evaluation/: dataset_loader.py  verdict_mapping.py
src/functions/: __init__.py  decomposer.py  safety_checker.py
src/graph/: state.py  workflow.py
src/medical_nlp/: __init__.py  medical_ner.py  mesh_mapper.py  pico_extractor.py
src/retrieval/: __init__.py  clinical_trials.py  cochrane_client.py  cross_encoder.py  drugbank_client.py  pubmed_client.py  semantic_scholar.py
systems/: README.md  __init__.py
systems/s1_no_retrieval/: __init__.py  system.py
systems/s2_simple_rag/: __init__.py  system.py
systems/s3_advanced_rag/: __init__.py  system.py
systems/s4_langgraph/: README.md  __init__.py  system.py  workflow.py
systems/s5_alt_platform/: __init__.py  system.py
tests/test_agents/: test_evidence_grader.py  test_evidence_retriever.py  test_retrieval_planner.py  test_verdict_agent.py
tests/test_evaluation/: test_dataset_loader.py
tests/test_functions/: test_safety_checker.py
(+7 files in other folders)
